Fixed horizontal scroll bar.

--- a/public/styles/site-theme.css
+++ b/public/styles/site-theme.css
@@ -144,7 +144,6 @@
     /* ===== Basic Tables ===== */
     section.basic-table {
         background-color: rgba(0, 0, 0, 0.5);
-        width: 100%;
         padding: 2px;
         margin-bottom: 30px;
     }
